EXA: Specify region used for source pixmap migration in exaCopyNtoN.

Avoids excessive migration overhead in some pathological cases. See
http://bugs.freedesktop.org/show_bug.cgi?id=15845 .